[gd_scene load_steps=3 format=3 uid="uid://ci37oy24oasix"]

[ext_resource type="Script" uid="uid://cqf2scwi5taoj" path="res://Interface/MissionList/MissionComponentsRow.gd" id="1_komvk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w120q"]
content_margin_left = 16.0
content_margin_top = 1.0
content_margin_right = 10.0
content_margin_bottom = 2.0
bg_color = Color(0.448028, 0.744767, 0.943392, 0.305882)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MissionComponents" type="HBoxContainer"]
script = ExtResource("1_komvk")

[node name="Origin" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w120q")

[node name="MarginContainer" type="MarginContainer" parent="Origin"]
layout_mode = 2

[node name="OriginLabel" type="Label" parent="Origin/MarginContainer"]
layout_mode = 2
text = "Origin"

[node name="Target" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w120q")

[node name="MarginContainer" type="MarginContainer" parent="Target"]
layout_mode = 2

[node name="TargetLabel" type="Label" parent="Target/MarginContainer"]
layout_mode = 2
text = "Target"

[node name="Location" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w120q")

[node name="MarginContainer" type="MarginContainer" parent="Location"]
layout_mode = 2

[node name="LocationLabel" type="Label" parent="Location/MarginContainer"]
layout_mode = 2
text = "Location"

[node name="Objective" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w120q")

[node name="MarginContainer" type="MarginContainer" parent="Objective"]
layout_mode = 2

[node name="ObjectiveLabel" type="Label" parent="Objective"]
layout_mode = 2
text = "Objective"
